--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.selected {
+  background-color:lemonchiffon;
+  color: green;
+}
